# errata-cli

./: .env.example  .gitignore  .golangci.yml  CLAUDE.md  Makefile  README.md  Scratchpad.md  defaults.md  go.mod  go.sum  go_docstore.md  paragraph.txt  pyproject.toml  quickstart.md  recipe.example.md  recipes_guide.md
.claude/: settings.json
.github/workflows/: ci.yml
cmd/errata/: main.go
data/: history.json  pricing_cache.json  prompt_history.jsonl
go_gauntlet_test/challenge11_docstore/: collection.go  docstore_test.go  document.go  go.mod  index.go  query.go
internal/adapters/: anthropic.go  anthropic_loop.go  anthropic_loop_test.go  azure_openai.go  azure_openai_test.go  bedrock.go  bedrock_loop.go  bedrock_loop_test.go  bedrock_test.go  common.go  common_test.go  filter_test.go  gemini.go  gemini_loop.go  gemini_loop_test.go  list.go  list_test.go  litellm.go  openai.go  openai_loop.go  openai_loop_test.go  openrouter.go  registry.go  registry_test.go  seed_test.go  vertex_ai.go  vertex_ai_test.go
internal/api/: client.go  client_test.go  contract_test.go  login.go  privacy.go  privacy_test.go  sync.go  sync_test.go  upload.go  upload_test.go
internal/capabilities/: defaults.go  defaults_test.go
internal/checkpoint/: checkpoint.go  checkpoint_test.go
internal/commands/: commands.go  commands_test.go
internal/config/: apply_recipe.go  apply_recipe_test.go  config.go  config_test.go
internal/criteria/: criteria.go  criteria_test.go
internal/datastore/: datastore.go  datastore_test.go
internal/diff/: diff.go  diff_test.go
internal/headless/: export_test.go  headless.go  headless_test.go  report.go
internal/history/: history.go  history_test.go
internal/hooks/: hooks.go  hooks_test.go
internal/jsonutil/: jsonutil.go  jsonutil_test.go
internal/logging/: logger.go  logger_test.go
internal/mcp/: client.go  manager.go  mcp_test.go
internal/models/: anthropic.go  base.go  base_test.go  gemini.go  litellm.go  openai.go  openrouter.go  pricing.go  pricing_test.go  registry.go  (+3 more)
pkg/: import_guard_test.go
tests/: test_cli.py  test_config.py  test_display.py  test_models_base.py  test_preferences.py  test_registry.py  test_runner.py
(+104 files in other folders)
